@@ -10,7 +10,7 @@
     <parent>
         <groupId>edu.tigers.sumatra</groupId>
         <artifactId>sumatra-parent</artifactId>
-        <version>6.0</version>
+        <version>2019-SNAPSHOT</version>
         <relativePath>../sumatra-parent/pom.xml</relativePath>
     </parent>
 
@@ -53,7 +53,7 @@
             <artifactId>moduli-geometry</artifactId>
         </dependency>
         <dependency>
-            <groupId>edu.tigers.moduli</groupId>
+            <groupId>com.github.TIGERs-Mannheim</groupId>
             <artifactId>moduli</artifactId>
         </dependency>
         <dependency>
@@ -90,6 +90,11 @@
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
@@ -135,7 +140,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/main/assembly/customAssembly.xml</descriptor>
@@ -196,32 +200,6 @@
                     </resources>
                 </configuration>
             </plugin>
-            <!-- run SumatraTrainer with mvn exec:java -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <configuration>
-                    <executable>java</executable>
-                    <workingDirectory>${project.basedir}/../..</workingDirectory>
-                    <arguments>
-                        <argument>-Xms512m</argument>
-                        <argument>-Xmx4G</argument>
-                        <argument>-server</argument>
-                        <argument>-Xnoclassgc</argument>
-                        <argument>-Xverify:none</argument>
-                        <argument>-Dsun.java2d.d3d=false</argument>
-                        <argument>-XX:+UseG1GC</argument>
-                        <argument>-Djava.net.preferIPv4Stack=true</argument>
-                        <argument>-XX:-OmitStackTraceInFastThrow</argument>
-                        <argument>-classpath</argument>
-                        <!-- automatically creates the classpath using all project dependencies,
-                             also adding the project build directory -->
-                        <classpath/>
-                        <argument>edu.tigers.sumatra.trainer.client.SumatraTrainerClient</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 </project>
