@@ -1,12 +1,10 @@
 ECHO OFF
 
-for %%X in (mvn) do (set FOUND=%%~$PATH:X)
-if not defined FOUND (
-	echo Maven not found
-	exit
-)
-
 cd %~dp0
 
-mvn -pl modules/sumatra-main exec:java
+set args=%*
 
+set CLASSPATH="modules/sumatra-main/target/lib/*"
+set JAVA_OPTS="-Xms64m -Xmx4G -server -Xnoclassgc -Xverify:none -Dsun.java2d.d3d=false -XX:+UseConcMarkSweepGC -Djava.net.preferIPv4Stack=true -XX:-OmitStackTraceInFastThrow -XX:+AggressiveOpts"
+
+java %JAVA_OPTS% edu.tigers.sumatra.Sumatra %args%
